        PR c++/5247         * call.c (convert_default_arg): Detect recursion.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129681 138bc75d-0d04-0410-961f-82ee72b054a4